ml-together-backend/test/e2e/mnist-test/debug/server.err
internal/modules/cjs/loader.js:979
  throw err;
  ^

Error: Cannot find module '/home/alejandra/Documents/Capstone/MLTogetherCurrent/MLTogether/ml-together-backend/test/e2e/mnist-test/data-rest-api/index.js'
    at Function.Module._resolveFilename (internal/modules/cjs/loader.js:976:15)
    at Function.Module._load (internal/modules/cjs/loader.js:859:27)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:71:12)
    at internal/main/run_main_module.js:17:47 {
  code: 'MODULE_NOT_FOUND',
  requireStack: []
}
